1. Добавлена функциональность booking. 1 часть